--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -87,7 +87,9 @@ anchors:
         bazel-targets
   bazel-bep: &bazel-bep
     name: Upload bazel-bep
-    if: always()
+    # runs only if previous step succeeded or failed;
+    # we avoid collecting artifacts of jobs that were cancelled
+    if: success() || failure()
     uses: actions/upload-artifact@v4
     with:
       name: ${{ github.job }}-bep
@@ -132,8 +134,8 @@ jobs:
           # check if PR title contains release and set timeout filters accordingly
           BAZEL_EXTRA_ARGS_RULES: ${{ env.BAZEL_EXTRA_ARGS_RULES || '' }}
           HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
-      - <<: *bazel-upload
       - <<: *bazel-bep
+      - <<: *bazel-upload
 
   bazel-build-all-config-check:
     <<: *dind-large-setup
@@ -196,17 +198,7 @@ jobs:
           BAZEL_COMMAND: "build"
           BAZEL_TARGETS: "//rs/..."
           BAZEL_EXTRA_ARGS: "--keep_going --config=fuzzing --build_tag_filters=libfuzzer"
-      - name: Upload bazel-bep
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: ${{ github.job }}-bep
-          retention-days: 14
-          if-no-files-found: ignore
-          compression-level: 9
-          path: |
-            bazel-bep.pb
-            profile.json
+      - <<: *bazel-bep
 
   bazel-build-fuzzers-afl:
     name: Bazel Build Fuzzers AFL
@@ -243,6 +235,7 @@ jobs:
         env:
           CI_COMMIT_REF_PROTECTED: ${{ github.ref_protected }}
           CI_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+
   build-ic:
     name: Build IC
     <<: *dind-large-setup
