--- a/rs/rosetta-api/BUILD.bazel
+++ b/rs/rosetta-api/BUILD.bazel
@@ -69,6 +69,10 @@ DEV_DEPENDENCIES = [
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//packages/pocket-ic",
     "//rs/crypto/ed25519",
+    "//rs/nns/governance",
+    "//rs/nns/governance/init",
+    "//rs/nns/handlers/root/impl:root",
+    "//rs/nns/test_utils",
     "//rs/rosetta-api",
     "//rs/rosetta-api/client:ic-icp-rosetta-client",
     "//rs/rosetta-api/icp_ledger/test_utils",
@@ -83,6 +87,7 @@ DEV_DEPENDENCIES = [
     "@crate_index//:ic-cdk",
     "@crate_index//:num-traits",
     "@crate_index//:proptest",
+    "@crate_index//:prost",
     "@crate_index//:rand_chacha",
     "@crate_index//:tempfile",
 ]
@@ -160,6 +165,8 @@ rust_test_suite_with_extra_srcs(
     data = [
         "//rs/canister_sandbox",
         "//rs/canister_sandbox:sandbox_launcher",
+        "//rs/nns/governance:governance-canister",
+        "//rs/nns/handlers/root/impl:root-canister",
         "//rs/pocket_ic_server:pocket-ic-server",
         "//rs/replica",
         "//rs/rosetta-api:ic-rosetta-api-rosetta-blocks",
@@ -174,6 +181,8 @@ rust_test_suite_with_extra_srcs(
         "ROSETTA_BIN_PATH": "$(rootpath //rs/rosetta-api:ic-rosetta-api-rosetta-blocks)",
         "SANDBOX_LAUNCHER": "$(rootpath //rs/canister_sandbox:sandbox_launcher)",
         "ICP_LEDGER_DEPLOYED_VERSION_WASM_PATH": "$(rootpath @mainnet_icp_ledger_canister//file)",
+        "GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath //rs/nns/governance:governance-canister)",
+        "ROOT_CANISTER_WASM_PATH": "$(rootpath //rs/nns/handlers/root/impl:root-canister)",
     },
     extra_srcs = glob([
         "tests/system_tests/common/*.rs",
