--- a/rs/rosetta-api/Cargo.toml
+++ b/rs/rosetta-api/Cargo.toml
@@ -73,6 +73,10 @@ icrc-ledger-types = { path = "../../packages/icrc-ledger-types" }
 num-traits = { workspace = true }
 ic-icrc1 = { path = "./icrc1" }
 ic-icrc1-tokens-u256 = { path = "./icrc1/tokens_u256" }
+ic-nns-test-utils = { path = "../nns/test_utils" }
+ic-nns-governance-init = { path = "../nns/governance/init" }
+ic-nns-handler-root = { path = "../nns/handlers/root/impl" }
+prost = { workspace = true }
 
 [features]
 rosetta-blocks = []
