--- a/rs/rosetta-api/client/Cargo.toml
+++ b/rs/rosetta-api/client/Cargo.toml
@@ -25,6 +25,7 @@ ic-crypto-secp256k1 = { path = "../../crypto/secp256k1" }
 ic-crypto-ed25519 = { path = "../../crypto/ed25519" }
 icp-ledger = { path = "../icp_ledger" }
 icrc-ledger-types = { path = "../../../packages/icrc-ledger-types" }
+ic-base-types = { path = "../../types/base_types" }
 
 [dev-dependencies]
 ic-icp-rosetta-runner = { path = "../runner" }
