chore(ICP-Rosetta): FI-1479: fix search transactions endpoint (#1585)
This MR proposes the following changes:

1. Delete the existing implementation of search transactions
2. Add an implementation of search transactions that matches the
standard and the icrc1 rosetta implementation
3. Add tests for all search options

---------

Co-authored-by: Mathias Björkqvist <mathias.bjorkqvist@dfinity.org>

--- a/rs/rosetta-api/BUILD.bazel
+++ b/rs/rosetta-api/BUILD.bazel
@@ -45,7 +45,9 @@ DEPENDENCIES = [
     "@crate_index//:rand",
     "@crate_index//:reqwest",
     "@crate_index//:rolling-file",
+    "@crate_index//:rusqlite",
     "@crate_index//:serde",
+    "@crate_index//:serde_bytes",
     "@crate_index//:serde_cbor",
     "@crate_index//:serde_json",
     "@crate_index//:strum",
