--- a/rs/rosetta-api/Cargo.toml
+++ b/rs/rosetta-api/Cargo.toml
@@ -41,7 +41,9 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 rolling-file = { workspace = true }
 rosetta-core = { path = "rosetta_core" }
+rusqlite = { version = "~0.28.0", features = ["bundled"] }
 serde = { workspace = true }
+serde_bytes = { workspace = true }
 serde_cbor = { workspace = true }
 serde_json = { workspace = true }
 strum = { workspace = true }
