fix(IDX): set compatibility on targets (#1658)
Target `principal_to_bytes` and `principal_to_bytes_test` are not
required to run on darwin x86-64 where they are breaking our master CI.

---------

Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>

--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -232,11 +232,19 @@ rust_binary(
 closure_js_library(
     name = "principal_to_bytes",
     srcs = ["templates/principal_to_bytes.js"],
+    # the test doesn't need to run on macOS; just linux is enough
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
 )
 
 closure_js_test(
     name = "principal_to_bytes_test",
     srcs = ["tests/principal_to_bytes_test.js"],
+    # the test doesn't need to run on macOS; just linux is enough
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
     deps = [
         # Keep sorted.
         ":principal_to_bytes",
