Update new container naming

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -156,7 +156,7 @@ oci_pull(
 
 # used in various places as base
 oci_pull(
-    name = "ubuntu_base",
+    name = "ubuntu_noble_base",
     image = "docker.io/library/ubuntu@sha256:77d57fd89366f7d16615794a5b53e124d742404e20f035c22032233f1826bd6a",
     platforms = ["linux/amd64"],
 )
