--- a/rs/tests/BUILD.bazel
+++ b/rs/tests/BUILD.bazel
@@ -145,7 +145,7 @@ uvm_config_image(
 
 # Packages we install into the image; see base image definition and its
 # 'manifest = ...' field for more information
-PACKAGES = [
+PACKAGES_NOBLE = [
     "@noble//bash/amd64",
     "@noble//ca-certificates/amd64",
     "@noble//coreutils/amd64",
@@ -162,7 +162,7 @@ PACKAGES = [
 ]
 
 tar(
-    name = "sh",
+    name = "sh_noble",
     mtree = [
         # needed as dpkg assumes sh is installed in a typical debian installation.
         "./usr/bin/sh type=link link=/bin/bash",
@@ -170,7 +170,7 @@ tar(
 )
 
 tar(
-    name = "mkfsvfat",
+    name = "mkfsvfat_noble",
     mtree = [
         # symlink instead of updating the PATH
         "./usr/bin/mkfs.vfat type=link link=/sbin/mkfs.vfat",
@@ -178,7 +178,7 @@ tar(
 )
 
 tar(
-    name = "awk",
+    name = "awk_noble",
     mtree = [
         # we install the GNU variant but call 'awk' so we symlink
         "./usr/bin/awk type=link link=/usr/bin/gawk",
@@ -187,15 +187,15 @@ tar(
 
 # Creates /var/lib/dpkg/status with installed package information.
 dpkg_status(
-    name = "dpkg_status",
+    name = "dpkg_status_noble",
     controls = [
         "%s:control" % package
-        for package in PACKAGES
+        for package in PACKAGES_NOBLE
     ],
 )
 
 passwd(
-    name = "passwd",
+    name = "passwd_noble",
     entries = [
         dict(
             gecos = ["root"],
@@ -209,33 +209,33 @@ passwd(
 )
 
 oci_image(
-    name = "ubuntu_test_runtime_image_src",
+    name = "ubuntu_noble_test_runtime_image_src",
     architecture = "amd64",
     os = "linux",
     target_compatible_with = [
         "@platforms//os:linux",
     ],
     tars = [
-        ":dpkg_status",
-        ":passwd",  # needed because we ssh in
+        ":dpkg_status_noble",
+        ":passwd_noble",  # needed because we ssh in
 
         # symlinks
-        ":awk",
-        ":mkfsvfat",
-        ":sh",
-    ] + PACKAGES,
+        ":awk_noble",
+        ":mkfsvfat_noble",
+        ":sh_noble",
+    ] + PACKAGES_NOBLE,
 )
 
 oci_tar(
-    name = "ubuntu_test_runtime.tar",
-    image = ":ubuntu_test_runtime_image_src",
-    repo_tags = ["ubuntu_test_runtime:image"],
+    name = "ubuntu_noble_test_runtime.tar",
+    image = ":ubuntu_noble_test_runtime_image_src",
+    repo_tags = ["ubuntu_noble_test_runtime:image"],
 )
 
 uvm_config_image(
-    name = "colocate_uvm_config_image",
+    name = "colocate_uvm_noble_config_image",
     srcs = [
-        ":ubuntu_test_runtime.tar",
+        ":ubuntu_noble_test_runtime.tar",
         "//rs/tests:activate-systest-uvm-config",
     ],
     remap_paths = {
