--- a/packages/ic-sha3/Cargo.toml
+++ b/packages/ic-sha3/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "ic-sha3"
-description = "Library for SHA-3 and Keccak hashing"
-version.workspace = true
+version = "1.0.0"
+description = "Library for SHA-3 and Keccak hashing on the Internet Computer"
+license = "Apache-2.0"
+readme = "README.md"
+include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
+repository = "https://github.com/dfinity/ic"
 authors.workspace = true
 edition.workspace = true
-documentation.workspace = true
+documentation = "https://docs.rs/ic-sha3"
 
 [dependencies]
 sha3 = { workspace = true }
