--- a/packages/ic-sha3/BUILD.bazel
+++ b/packages/ic-sha3/BUILD.bazel
@@ -12,31 +12,19 @@ DEV_DEPENDENCIES = [
     "@crate_index//:hex",
 ]
 
-MACRO_DEPENDENCIES = []
-
-DEV_MACRO_DEPENDENCIES = []
-
-ALIASES = {}
-
 rust_library(
-    name = "sha3",
+    name = "ic-sha3",
     srcs = glob(["src/**/*.rs"]),
-    aliases = ALIASES,
-    crate_name = "ic_crypto_sha3",
-    edition = "2021",
-    proc_macro_deps = MACRO_DEPENDENCIES,
     deps = DEPENDENCIES,
 )
 
 rust_test(
-    name = "sha3_test",
-    crate = ":sha3",
-    proc_macro_deps = DEV_MACRO_DEPENDENCIES,
-    deps = DEV_DEPENDENCIES,
+    name = "unit_tests",
+    crate = ":ic-sha3",
 )
 
 rust_test_suite(
-    name = "sha3_integration",
+    name = "integration_tests",
     srcs = glob(
         ["tests/*.rs"],
     ),
@@ -44,17 +32,16 @@ rust_test_suite(
         "test_resources/SHAKE256ShortMsg_subset.rsp",
         "test_resources/SHAKE256VariableOut_subset.rsp",
     ],
-    proc_macro_deps = MACRO_DEPENDENCIES + DEV_MACRO_DEPENDENCIES,
-    deps = [":sha3"] + DEPENDENCIES + DEV_DEPENDENCIES,
+    deps = [":ic-sha3"] + DEPENDENCIES + DEV_DEPENDENCIES,
 )
 
 rust_doc(
-    name = "sha3_doc",
-    crate = ":sha3",
+    name = "doc",
+    crate = ":ic-sha3",
 )
 
 rust_doc_test(
-    name = "sha3_doc_test",
-    crate = ":sha3",
-    deps = [":sha3"] + DEPENDENCIES + DEV_DEPENDENCIES,
+    name = "doc_test",
+    crate = ":ic-sha3",
+    deps = [":ic-sha3"] + DEPENDENCIES + DEV_DEPENDENCIES,
 )
