--- a/rs/rosetta-api/ledger_canister_blocks_synchronizer/test_utils/Cargo.toml
+++ b/rs/rosetta-api/ledger_canister_blocks_synchronizer/test_utils/Cargo.toml
@@ -10,7 +10,7 @@ documentation.workspace = true
 ic-canister-client-sender = { path = "../../../canister_client/sender" }
 ic-cdk = { workspace = true }
 ic-ledger-canister-blocks-synchronizer = { path = "../" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-types = { path = "../../../types/types" }
 icp-ledger = { path = "../../../ledger_suite/icp" }
 rand = { workspace = true }
