--- a/rs/ledger_suite/common/ledger_canister_core/Cargo.toml
+++ b/rs/ledger_suite/common/ledger_canister_core/Cargo.toml
@@ -9,12 +9,12 @@ documentation.workspace = true
 [dependencies]
 async-trait = { workspace = true }
 candid = { workspace = true }
-ic-base-types = { path = "../../types/base_types" }
-ic-canister-log = { path = "../../rust_canisters/canister_log" }
-ic-limits = { path = "../../limits" }
+ic-base-types = { path = "../../../types/base_types" }
+ic-canister-log = { path = "../../../rust_canisters/canister_log" }
+ic-limits = { path = "../../../limits" }
 ic-ledger-core = { path = "../ledger_core" }
-ic-ledger-hash-of = { path = "../../../packages/ic-ledger-hash-of" }
-ic-management-canister-types = { path = "../../types/management_canister_types" }
-ic-utils = { path = "../../utils" }
+ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
+ic-management-canister-types = { path = "../../../types/management_canister_types" }
+ic-utils = { path = "../../../utils" }
 num-traits = { workspace = true }
 serde = { workspace = true }
