--- a/rs/ledger_suite/common/ledger_core/Cargo.toml
+++ b/rs/ledger_suite/common/ledger_core/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 
 [dependencies]
 candid = { workspace = true }
-ic-ledger-hash-of = { path = "../../../packages/ic-ledger-hash-of" }
+ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
 num-traits = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
