--- a/rs/ledger_suite/icp/Cargo.toml
+++ b/rs/ledger_suite/icp/Cargo.toml
@@ -17,8 +17,8 @@ hex = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
 ic-cdk = { workspace = true }
 ic-crypto-sha2 = { path = "../../crypto/sha2" }
-ic-ledger-canister-core = { path = "../ledger_canister_core" }
-ic-ledger-core = { path = "../ledger_core" }
+ic-ledger-canister-core = { path = "../common/ledger_canister_core" }
+ic-ledger-core = { path = "../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../packages/ic-ledger-hash-of" }
 icrc-ledger-types = { path = "../../../packages/icrc-ledger-types" }
 lazy_static = { workspace = true }
