--- a/rs/ledger_suite/icp/index/Cargo.toml
+++ b/rs/ledger_suite/icp/index/Cargo.toml
@@ -13,20 +13,20 @@ path = "src/main.rs"
 [dependencies]
 candid = { workspace = true }
 ciborium = { workspace = true }
-dfn_core = { path = "../../../rust_canisters/dfn_core" }
-ic-base-types = { path = "../../../types/base_types" }
-ic-canister-log = { path = "../../../rust_canisters/canister_log" }
-ic-canisters-http-types = { path = "../../../rust_canisters/http_types" }
+dfn_core = { path = "../../../../rust_canisters/dfn_core" }
+ic-base-types = { path = "../../../../types/base_types" }
+ic-canister-log = { path = "../../../../rust_canisters/canister_log" }
+ic-canisters-http-types = { path = "../../../../rust_canisters/http_types" }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-icrc1-index-ng = { path = "../../icrc1/index-ng" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-metrics-encoder = "1.1"
 ic-stable-structures = { workspace = true }
 icp-ledger = { path = ".." }
-icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
+icrc-ledger-types = { path = "../../../../../packages/icrc-ledger-types" }
 num-traits = { workspace = true }
 scopeguard = "1.1.0"
 serde = { workspace = true }
@@ -38,5 +38,5 @@ candid_parser = { workspace = true }
 ic-icrc1-ledger-sm-tests = { path = "../../icrc1/ledger/sm-tests" }
 ic-ledger-test-utils = { path = "../test_utils" }
 ic-rosetta-test-utils = { path = "../../test_utils" }
-ic-state-machine-tests = { path = "../../../state_machine_tests" }
-ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
+ic-state-machine-tests = { path = "../../../../state_machine_tests" }
+ic-test-utilities-load-wasm = { path = "../../../../test_utilities/load_wasm" }
