--- a/rs/ledger_suite/icrc1/archive/Cargo.toml
+++ b/rs/ledger_suite/icrc1/archive/Cargo.toml
@@ -16,8 +16,8 @@ ic-cdk-macros = { workspace = true }
 ic-icrc1 = { path = "../" }
 ic-icrc1-tokens-u256 = { path = "../tokens_u256", optional = true }
 ic-icrc1-tokens-u64 = { path = "../tokens_u64" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-metrics-encoder = "1"
 ic-stable-structures = { workspace = true }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
@@ -25,7 +25,7 @@ serde = { workspace = true }
 
 [dev-dependencies]
 candid_parser = { workspace = true }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-rosetta-test-utils = { path = "../../test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
