--- a/rs/ledger_suite/icrc1/index-ng/Cargo.toml
+++ b/rs/ledger_suite/icrc1/index-ng/Cargo.toml
@@ -24,8 +24,8 @@ ic-crypto-sha2 = { path = "../../../crypto/sha2" }
 ic-icrc1 = { path = ".." }
 ic-icrc1-tokens-u256 = { path = "../tokens_u256", optional = true }
 ic-icrc1-tokens-u64 = { path = "../tokens_u64" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-metrics-encoder = "1.1"
 ic-stable-structures = { workspace = true }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
