--- a/rs/ledger_suite/icrc1/index/Cargo.toml
+++ b/rs/ledger_suite/icrc1/index/Cargo.toml
@@ -19,7 +19,7 @@ ic-cdk-timers = { workspace = true }
 ic-icrc1 = { path = ".." }
 ic-icrc1-ledger = { path = "../ledger" }
 ic-icrc1-tokens-u64 = { path = "../tokens_u64" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
 ic-metrics-encoder = "1.1"
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
@@ -33,7 +33,7 @@ candid_parser = { workspace = true }
 ic-base-types = { path = "../../../types/base_types" }
 ic-icrc1-ledger = { path = "../ledger" }
 ic-icrc1-ledger-sm-tests = { path = "../ledger/sm-tests" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-rosetta-test-utils = { path = "../../test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
