--- a/rs/ledger_suite/icrc1/rosetta/Cargo.toml
+++ b/rs/ledger_suite/icrc1/rosetta/Cargo.toml
@@ -27,8 +27,8 @@ ic-icrc1 = { path = ".." }
 ic-icrc1-ledger = { path = "../ledger" }
 ic-icrc1-tokens-u256 = { path = "../tokens_u256" }
 ic-icrc1-tokens-u64 = { path = "../tokens_u64" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
 ic-rosetta-api = { path = "../.." }
 ic-sys = { path = "../../../sys" }
@@ -70,7 +70,7 @@ ic-icrc-rosetta-client = { path = "client" }
 ic-icrc-rosetta-runner = { path = "runner" }
 ic-icrc1-ledger-sm-tests = { path = "../ledger/sm-tests" }
 ic-icrc1-test-utils = { path = "../test_utils" }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
 ic-rosetta-test-utils = { path = "../../test_utils" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 ic-utils = { workspace = true }
