--- a/rs/ledger_suite/icrc1/test_utils/Cargo.toml
+++ b/rs/ledger_suite/icrc1/test_utils/Cargo.toml
@@ -14,8 +14,8 @@ ic-crypto-secp256k1 = { path = "../../../crypto/secp256k1" }
 ic-crypto-ed25519 = { path = "../../../crypto/ed25519" }
 ic-crypto-test-utils-reproducible-rng = { path = "../../../crypto/test_utils/reproducible_rng" }
 ic-icrc1 = { path = ".." }
-ic-ledger-canister-core = { path = "../../ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
 ic-types = { path = "../../../types/types" }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
@@ -24,6 +24,6 @@ proptest = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
 ring = { version = "0.17.7", features = ["std"] }
-rosetta-core = { path = "../../rosetta_core" }
+rosetta-core = { path = "../../../rosetta-api/rosetta_core" }
 serde_bytes = { workspace = true }
 serde_json = { workspace = true }
