--- a/rs/ledger_suite/icrc1/tokens_u256/Cargo.toml
+++ b/rs/ledger_suite/icrc1/tokens_u256/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 candid = { workspace = true }
 ciborium = { workspace = true }
 ethnum = { workspace = true }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-stable-structures = { workspace = true }
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
