--- a/rs/ledger_suite/icrc1/tokens_u64/Cargo.toml
+++ b/rs/ledger_suite/icrc1/tokens_u64/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 candid = { workspace = true }
-ic-ledger-core = { path = "../../ledger_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-stable-structures = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true }
