--- a/rs/ledger_suite/tests/sm-tests/Cargo.toml
+++ b/rs/ledger_suite/tests/sm-tests/Cargo.toml
@@ -19,13 +19,13 @@ ic-canisters-http-types = { path = "../../../../rust_canisters/http_types" }
 ic-error-types = { path = "../../../../types/error_types" }
 ic-icrc1 = { path = "../.." }
 ic-icrc1-ledger = { path = ".." }
-ic-icrc1-test-utils = { path = "../../test_utils" }
-ic-icrc1-tokens-u256 = { path = "../../tokens_u256", optional = true }
-ic-icrc1-tokens-u64 = { path = "../../tokens_u64" }
-ic-ledger-canister-core = { path = "../../../ledger_canister_core" }
-ic-ledger-core = { path = "../../../ledger_core" }
+ic-icrc1-test-utils = { path = "../../icrc1/test_utils" }
+ic-icrc1-tokens-u256 = { path = "../../icrc1/tokens_u256", optional = true }
+ic-icrc1-tokens-u64 = { path = "../../icrc1/tokens_u64" }
+ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
+ic-ledger-core = { path = "../../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../../../packages/ic-ledger-hash-of" }
-ic-rosetta-test-utils = { path = "../../../test_utils" }
+ic-rosetta-test-utils = { path = "../../../../rosetta-api/test_utils" }
 ic-management-canister-types = { path = "../../../../types/management_canister_types" }
 ic-state-machine-tests = { path = "../../../../state_machine_tests" }
 ic-types = { path = "../../../../types/types" }
