--- a/rs/registry/admin/BUILD.bazel
+++ b/rs/registry/admin/BUILD.bazel
@@ -3,7 +3,7 @@ load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
 package(default_visibility = ["//visibility:public"])
 
 # See rs/nervous_system/feature_test.md
-BASE_DEPENDENCIES = [
+DEPENDENCIES = [
     # Keep sorted.
     "//rs/canister_client",
     "//rs/canister_client/sender",
@@ -21,7 +21,11 @@ BASE_DEPENDENCIES = [
     "//rs/nns/cmc",
     "//rs/nns/common",
     "//rs/nns/constants",
+    "//rs/nns/governance/api",
+    "//rs/nns/handlers/root/impl:root",
     "//rs/nns/init",
+    "//rs/nns/sns-wasm",
+    "//rs/nns/test_utils",
     "//rs/prep",
     "//rs/protobuf",
     "//rs/registry/canister",
@@ -36,6 +40,8 @@ BASE_DEPENDENCIES = [
     "//rs/registry/subnet_features",
     "//rs/registry/subnet_type",
     "//rs/registry/transport",
+    "//rs/sns/init",
+    "//rs/sns/swap",
     "//rs/types/management_canister_types",
     "//rs/types/types",
     "@crate_index//:anyhow",
@@ -58,26 +64,6 @@ BASE_DEPENDENCIES = [
     "@crate_index//:tokio",
     "@crate_index//:url",
 ]
-
-# Each target declared in this file may choose either these (release-ready)
-# dependencies (`DEPENDENCIES`), or `DEPENDENCIES_WITH_TEST_FEATURES` feature previews.
-DEPENDENCIES = BASE_DEPENDENCIES + [
-    "//rs/sns/init",
-    "//rs/nns/governance/api",
-    "//rs/nns/sns-wasm",
-    "//rs/nns/handlers/root/impl:root",
-    "//rs/sns/swap",
-    "//rs/nns/test_utils",
-]
-
-# (Currently not used)
-# DEPENDENCIES_WITH_TEST_FEATURES = BASE_DEPENDENCIES + [
-#     "//rs/sns/init:init--test_feature",
-#     "//rs/nns/sns-wasm:sns-wasm--test_feature",
-#     "//rs/nns/handlers/root/impl:root--test_feature",
-#     "//rs/sns/swap:swap--test_feature",
-#     "//rs/nns/test_utils:test_utils--test_feature",
-# ]
 
 MACRO_DEPENDENCIES = [
     # Keep sorted.
