--- a/rs/sns/governance/BUILD.bazel
+++ b/rs/sns/governance/BUILD.bazel
@@ -124,19 +124,6 @@ rust_library(
     deps = DEPENDENCIES + [":build_script"],
 )
 
-rust_library(
-    name = "governance--test_feature",
-    srcs = LIB_SRCS,
-    aliases = ALIASES,
-    crate_features = ["test"],
-    crate_name = "ic_sns_governance",
-    proc_macro_deps = MACRO_DEPENDENCIES,
-    version = "0.9.0",
-    deps = DEPENDENCIES + [
-        ":build_script",
-    ],
-)
-
 rust_canister(
     name = "sns-governance-canister",
     srcs = ["canister/canister.rs"],
@@ -161,7 +148,7 @@ rust_canister(
     service_file = ":canister/governance_test.did",
     deps = DEPENDENCIES + [
         ":build_script",
-        ":governance--test_feature",
+        ":governance",
         "//rs/nervous_system/canisters",
     ],
 )
@@ -196,7 +183,7 @@ rust_test(
     proc_macro_deps = MACRO_DEPENDENCIES + MACRO_DEV_DEPENDENCIES,
     deps = DEPENDENCIES + DEV_DEPENDENCIES + [
         ":build_script",
-        ":governance--test_feature",
+        ":governance",
         "//rs/nervous_system/canisters",
     ],
 )
@@ -217,7 +204,7 @@ rust_test_suite_with_extra_srcs(
         "tests/fixtures/environment_fixture.rs",
     ],
     proc_macro_deps = MACRO_DEPENDENCIES + MACRO_DEV_DEPENDENCIES,
-    deps = [":governance--test_feature"] + DEPENDENCIES + DEV_DEPENDENCIES + [":build_script"],
+    deps = [":governance"] + DEPENDENCIES + DEV_DEPENDENCIES + [":build_script"],
 )
 
 generated_files_check(
