--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -57,6 +57,7 @@ rust_canister(
         "@crate_index//:candid",
         "@crate_index//:ic-cdk",
         "@crate_index//:serde",
+        "@crate_index//:serde_bytes",
     ],
 )
 
