--- a/rs/ic_os/os_tools/setupos_tool/Cargo.toml
+++ b/rs/ic_os/os_tools/setupos_tool/Cargo.toml
@@ -10,6 +10,6 @@ path = "src/main.rs"
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
-config = { path = "../../config" }
+config_tool = { path = "../../config_tool" }
 network = { path = "../../network" }
 utils = { path = "../../utils" }
