CRP-2850: remove usage of ic-crypto-sha3

--- a/rs/ethereum/types/Cargo.toml
+++ b/rs/ethereum/types/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 
 [dependencies]
 hex = { workspace = true }
-ic-crypto-sha3 = { path = "../../crypto/sha3" }
+ic-sha3 = { path = "../../../packages/ic-sha3" }
 minicbor = { workspace = true }
 minicbor-derive = { workspace = true }
 serde = { workspace = true }
