--- a/rs/crypto/internal/crypto_lib/bls12_381/vetkd/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/bls12_381/vetkd/BUILD.bazel
@@ -5,8 +5,8 @@ package(default_visibility = ["//rs/crypto:__subpackages__"])
 
 DEPENDENCIES = [
     # Keep sorted.
+    "//packages/ic-sha3",
     "//rs/crypto/internal/crypto_lib/bls12_381/type",
-    "//rs/crypto/sha3",
     "@crate_index//:rand",
     "@crate_index//:zeroize",
 ]
