--- a/rs/crypto/internal/crypto_lib/bls12_381/vetkd/Cargo.toml
+++ b/rs/crypto/internal/crypto_lib/bls12_381/vetkd/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 
 [dependencies]
 ic-crypto-internal-bls12-381-type = { path = "../type" }
-ic-crypto-sha3 = { path = "../../../../sha3" }
+ic-sha3 = { path = "../../../../../../packages/ic-sha3" }
 rand = { workspace = true }
 zeroize = { workspace = true }
 
