--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -43,8 +43,8 @@ rust_library(
         # Keep sorted.
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
+        "//packages/ic-sha3",
         "//rs/crypto/secp256k1",
-        "//rs/crypto/sha3",
         "//rs/ethereum/evm-rpc-client",
         "//rs/ethereum/types",
         "//rs/phantom_newtype",
