--- a/rs/ledger_suite/icp/rosetta-integration-tests/Cargo.toml
+++ b/rs/ledger_suite/icp/rosetta-integration-tests/Cargo.toml
@@ -14,8 +14,8 @@ ic-icrc-rosetta = { path = "../../icrc1/rosetta" }
 ic-icrc-rosetta-client = { path = "../../icrc1/rosetta/client" }
 ic-icrc1 = { path = "../../icrc1" }
 ic-ledger-test-utils = { path = "../test_utils" }
-ic-rosetta-api = { path = "../.." }
-ic-sender-canister = { path = "../../test_utils/sender_canister" }
+ic-rosetta-api = { path = "../../../rosetta-api" }
+ic-sender-canister = { path = "../../../rosetta-api/test_utils/sender_canister" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 icp-ledger = { path = ".." }
 icrc-ledger-agent = { path = "../../../../packages/icrc-ledger-agent" }
@@ -24,7 +24,7 @@ ledger-canister = { path = "../ledger" }
 num-traits = { workspace = true }
 pocket-ic = { path = "../../../../packages/pocket-ic" }
 reqwest = { workspace = true }
-rosetta-core = { path = "../../rosetta_core" }
+rosetta-core = { path = "../../../rosetta-api/rosetta_core" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
