--- a/rs/ledger_suite/icrc1/archive/Cargo.toml
+++ b/rs/ledger_suite/icrc1/archive/Cargo.toml
@@ -26,7 +26,7 @@ serde = { workspace = true }
 [dev-dependencies]
 candid_parser = { workspace = true }
 ic-ledger-core = { path = "../../common/ledger_core" }
-ic-rosetta-test-utils = { path = "../../test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 
