--- a/rs/ledger_suite/icrc1/index/Cargo.toml
+++ b/rs/ledger_suite/icrc1/index/Cargo.toml
@@ -32,9 +32,9 @@ assert_matches = { workspace = true }
 candid_parser = { workspace = true }
 ic-base-types = { path = "../../../types/base_types" }
 ic-icrc1-ledger = { path = "../ledger" }
-ic-icrc1-ledger-sm-tests = { path = "../ledger/sm-tests" }
+ic-icrc1-ledger-sm-tests = { path = "../../tests/sm-tests" }
 ic-ledger-core = { path = "../../common/ledger_core" }
-ic-rosetta-test-utils = { path = "../../test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 num-traits = { workspace = true }
