--- a/rs/ledger_suite/icrc1/ledger/Cargo.toml
+++ b/rs/ledger_suite/icrc1/ledger/Cargo.toml
@@ -42,7 +42,7 @@ assert_matches = { workspace = true }
 candid_parser = { workspace = true }
 cddl = "0.9.4"
 ic-agent = { workspace = true }
-ic-icrc1-ledger-sm-tests = { path = "sm-tests" }
+ic-icrc1-ledger-sm-tests = { path = "../../tests/sm-tests" }
 ic-icrc1-test-utils = { path = "../test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
