--- a/rs/ledger_suite/icrc1/rosetta/Cargo.toml
+++ b/rs/ledger_suite/icrc1/rosetta/Cargo.toml
@@ -30,7 +30,7 @@ ic-icrc1-tokens-u64 = { path = "../tokens_u64" }
 ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
 ic-ledger-core = { path = "../../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
-ic-rosetta-api = { path = "../.." }
+ic-rosetta-api = { path = "../../../rosetta-api" }
 ic-sys = { path = "../../../sys" }
 icrc-ledger-agent = { path = "../../../../packages/icrc-ledger-agent" }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
@@ -42,7 +42,7 @@ proptest = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
 rolling-file = "0.2.0"
-rosetta-core = { path = "../../rosetta_core" }
+rosetta-core = { path = "../../../rosetta-api/rosetta_core" }
 rusqlite = { version = "~0.28.0", features = ["bundled"] }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
@@ -68,10 +68,10 @@ futures = { workspace = true }
 ic-base-types = { path = "../../../types/base_types" }
 ic-icrc-rosetta-client = { path = "client" }
 ic-icrc-rosetta-runner = { path = "runner" }
-ic-icrc1-ledger-sm-tests = { path = "../ledger/sm-tests" }
+ic-icrc1-ledger-sm-tests = { path = "../../tests/sm-tests" }
 ic-icrc1-test-utils = { path = "../test_utils" }
 ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
-ic-rosetta-test-utils = { path = "../../test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 ic-utils = { workspace = true }
 once_cell = "1.8.0"
