--- a/rs/ledger_suite/tests/sm-tests/Cargo.toml
+++ b/rs/ledger_suite/tests/sm-tests/Cargo.toml
@@ -14,23 +14,23 @@ cddl = "0.9.4"
 futures = { workspace = true }
 hex = { workspace = true }
 ic-agent = { workspace = true }
-ic-base-types = { path = "../../../../types/base_types" }
-ic-canisters-http-types = { path = "../../../../rust_canisters/http_types" }
-ic-error-types = { path = "../../../../types/error_types" }
-ic-icrc1 = { path = "../.." }
-ic-icrc1-ledger = { path = ".." }
+ic-base-types = { path = "../../../types/base_types" }
+ic-canisters-http-types = { path = "../../../rust_canisters/http_types" }
+ic-error-types = { path = "../../../types/error_types" }
+ic-icrc1 = { path = "../../icrc1" }
+ic-icrc1-ledger = { path = "../../icrc1/ledger" }
 ic-icrc1-test-utils = { path = "../../icrc1/test_utils" }
 ic-icrc1-tokens-u256 = { path = "../../icrc1/tokens_u256", optional = true }
 ic-icrc1-tokens-u64 = { path = "../../icrc1/tokens_u64" }
 ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
 ic-ledger-core = { path = "../../common/ledger_core" }
-ic-ledger-hash-of = { path = "../../../../../packages/ic-ledger-hash-of" }
-ic-rosetta-test-utils = { path = "../../../../rosetta-api/test_utils" }
-ic-management-canister-types = { path = "../../../../types/management_canister_types" }
-ic-state-machine-tests = { path = "../../../../state_machine_tests" }
-ic-types = { path = "../../../../types/types" }
-ic-universal-canister = { path = "../../../../universal_canister/lib" }
-icrc-ledger-types = { path = "../../../../../packages/icrc-ledger-types" }
+ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
+ic-management-canister-types = { path = "../../../types/management_canister_types" }
+ic-state-machine-tests = { path = "../../../state_machine_tests" }
+ic-types = { path = "../../../types/types" }
+ic-universal-canister = { path = "../../../universal_canister/lib" }
+icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
 icrc1-test-env = { git = "https://github.com/dfinity/ICRC-1", rev = "26a80d777e079644cd69e883e18dad1a201f5b1a" }
 icrc1-test-suite = { git = "https://github.com/dfinity/ICRC-1", rev = "26a80d777e079644cd69e883e18dad1a201f5b1a" }
 num-traits = { workspace = true }
