--- a/rs/rosetta-api/Cargo.toml
+++ b/rs/rosetta-api/Cargo.toml
@@ -25,14 +25,14 @@ ic-crypto-sha2 = { path = "../crypto/sha2/" }
 ic-crypto-tree-hash = { path = "../crypto/tree_hash" }
 ic-crypto-utils-threshold-sig-der = { path = "../crypto/utils/threshold_sig_der" }
 ic-ledger-canister-blocks-synchronizer = { path = "ledger_canister_blocks_synchronizer" }
-ic-ledger-canister-core = { path = "ledger_canister_core" }
-ic-ledger-core = { path = "ledger_core" }
+ic-ledger-canister-core = { path = "../ledger_suite/common/ledger_canister_core" }
+ic-ledger-core = { path = "../ledger_suite/common/ledger_core" }
 ic-ledger-hash-of = { path = "../../packages/ic-ledger-hash-of" }
 ic-nns-common = { path = "../nns/common" }
 ic-nns-constants = { path = "../nns/constants" }
 ic-nns-governance-api = { path = "../nns/governance/api" }
 ic-types = { path = "../types/types" }
-icp-ledger = { path = "icp_ledger" }
+icp-ledger = { path = "../ledger_suite/icp" }
 lazy_static = { workspace = true }
 num-bigint = { workspace = true }
 on_wire = { path = "../rust_canisters/on_wire" }
