--- a/rs/rosetta-api/ledger_canister_blocks_synchronizer/Cargo.toml
+++ b/rs/rosetta-api/ledger_canister_blocks_synchronizer/Cargo.toml
@@ -15,8 +15,8 @@ dfn_protobuf = { path = "../../rust_canisters/dfn_protobuf" }
 ic-agent = { workspace = true }
 ic-certification = { path = "../../certification" }
 ic-crypto-sha2 = { path = "../../crypto/sha2" }
-ic-ledger-canister-core = { path = "../common/ledger_canister_core" }
-ic-ledger-core = { path = "../common/ledger_core" }
+ic-ledger-canister-core = { path = "../../ledger_suite/common/ledger_canister_core" }
+ic-ledger-core = { path = "../../ledger_suite/common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../packages/ic-ledger-hash-of" }
 ic-types = { path = "../../types/types" }
 icp-ledger = { path = "../../ledger_suite/icp" }
