chore(crypto): Publish `ic-sha3` (#1674)
Move the crate `ic-crypto-sha3` in `rs/crypto/sha3` to `rs/packages` and
rename the moved version to `ic-sha3`.

---------

Co-authored-by: IDX GitHub Automation <infra+github-automation@dfinity.org>

--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -41,10 +41,10 @@ rust_library(
     version = "0.1.0",
     deps = [
         # Keep sorted.
+        "//packages/ic-sha3",
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/crypto/secp256k1",
-        "//rs/crypto/sha3",
         "//rs/ethereum/evm-rpc-client",
         "//rs/ethereum/types",
         "//rs/phantom_newtype",
