XC-200: use ic-sha3 for the minter

--- a/rs/ethereum/types/Cargo.toml
+++ b/rs/ethereum/types/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 
 [dependencies]
 hex = { workspace = true }
-ic-sha3 = { version = "1.0.0" }
+ic-sha3 = { workspace = true }
 minicbor = { workspace = true }
 minicbor-derive = { workspace = true }
 serde = { workspace = true }
