--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -41,7 +41,6 @@ rust_library(
     version = "0.1.0",
     deps = [
         # Keep sorted.
-        "//packages/ic-sha3",
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/crypto/secp256k1",
@@ -53,6 +52,7 @@ rust_library(
         "@crate_index//:candid",
         "@crate_index//:ethnum",
         "@crate_index//:futures",
+        "@crate_index//:ic-sha3",
         "@crate_index//:hex",
         "@crate_index//:hex-literal",
         "@crate_index//:ic-canister-log",
