--- a/rs/ethereum/cketh/minter/Cargo.toml
+++ b/rs/ethereum/cketh/minter/Cargo.toml
@@ -28,7 +28,7 @@ ic-crypto-secp256k1 = { path = "../../../crypto/secp256k1" }
 ic-ethereum-types = { path = "../../types" }
 ic-management-canister-types = { path = "../../../types/management_canister_types" }
 ic-metrics-encoder = "1"
-ic-sha3 = { path = "../../../../packages/ic-sha3" }
+ic-sha3 = { workspace = true }
 ic-stable-structures = { workspace = true }
 ic-utils-ensure = { path = "../../../utils/ensure" }
 icrc-ledger-client-cdk = { path = "../../../../packages/icrc-ledger-client-cdk" }
