--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -43,9 +43,9 @@ rust_library(
         # Keep sorted.
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
+        "//packages/ic-ethereum-types",
         "//rs/crypto/secp256k1",
         "//rs/ethereum/evm-rpc-client",
-        "//rs/ethereum/types",
         "//rs/phantom_newtype",
         "//rs/types/management_canister_types",
         "//rs/utils/ensure",
@@ -146,8 +146,8 @@ rust_test(
         ":minter",
         "//packages/icrc-ledger-client-cdk:icrc_ledger_client_cdk",
         "//packages/icrc-ledger-types:icrc_ledger_types",
+        "//packages/ic-ethereum-types",
         "//rs/crypto/secp256k1",
-        "//rs/ethereum/types",
         "//rs/rust_canisters/http_types",
         "@crate_index//:askama",
         "@crate_index//:candid",
@@ -203,9 +203,9 @@ rust_binary(
             # Keep sorted.
             ":minter",
             "//packages/icrc-ledger-types:icrc_ledger_types",
+            "//packages/ic-ethereum-types",
             "//rs/ethereum/cketh/test_utils",
             "//rs/ethereum/ledger-suite-orchestrator/test_utils",
-            "//rs/ethereum/types",
             "//rs/state_machine_tests",
             "//rs/types/base_types",
             "@crate_index//:assert_matches",
