--- a/rs/ethereum/cketh/minter/Cargo.toml
+++ b/rs/ethereum/cketh/minter/Cargo.toml
@@ -25,7 +25,7 @@ ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-crypto-secp256k1 = { path = "../../../crypto/secp256k1" }
-ic-ethereum-types = { path = "../../types" }
+ic-ethereum-types = { path = "../../../../packages/ic-ethereum-types" }
 ic-management-canister-types = { path = "../../../types/management_canister_types" }
 ic-metrics-encoder = "1"
 ic-sha3 = { workspace = true }
