--- a/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
+++ b/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
@@ -20,7 +20,7 @@ ic-canisters-http-types = { path = "../../rust_canisters/http_types" }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 ic-crypto-sha2 = { path = "../../crypto/sha2" }
-ic-ethereum-types = { path = "../types" }
+ic-ethereum-types = { path = "../../../packages/ic-ethereum-types" }
 ic-icrc1-index-ng = { path = "../../rosetta-api/icrc1/index-ng" }
 ic-icrc1-ledger = { path = "../../rosetta-api/icrc1/ledger" }
 ic-management-canister-types = { path = "../../types/management_canister_types" }
