chore(PocketIC): harden HTTP gateway tests to include raw domain (#1656)
This PR hardens PocketIC HTTP gateway tests by requesting the "raw"
domains, too. The motivation is that the "raw" domains do not work
properly in the PocketIC version shipped with dfx v0.23.0.

--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -58,6 +58,7 @@ rust_canister(
         "@crate_index//:candid",
         "@crate_index//:ic-cdk",
         "@crate_index//:serde",
+        "@crate_index//:serde_bytes",
     ],
 )
 
