--- a/ic-os/components/hostos-scripts/guestos/guestos.xml.template
+++ b/ic-os/components/hostos-scripts/guestos/guestos.xml.template
@@ -37,6 +37,7 @@
   </pm>
   <devices>
     <emulator>/usr/local/bin/qemu-system-x86_64</emulator>
+    <!-- <emulator>/usr/bin/qemu-system-x86_64</emulator> -->
     <disk type='block' device='disk'>
       <driver name='qemu' type='raw' cache='none' discard='unmap'/>
       <source dev='/dev/hostlvm/guestos' index='1'/>
