--- a/rs/http_endpoints/xnet/BUILD.bazel
+++ b/rs/http_endpoints/xnet/BUILD.bazel
@@ -45,15 +45,15 @@ DEV_DEPENDENCIES = [
 ]
 
 rust_library(
-    name = "endpoint",
+    name = "xnet",
     srcs = glob(["src/**"]),
-    crate_name = "ic_xnet_endpoint",
+    crate_name = "ic_http_endpoints_xnet",
     version = "0.9.0",
     deps = DEPENDENCIES,
 )
 
 rust_test(
-    name = "endpoint_test",
-    crate = ":endpoint",
+    name = "test",
+    crate = ":xnet",
     deps = DEV_DEPENDENCIES,
 )
