--- a/rs/replica/BUILD.bazel
+++ b/rs/replica/BUILD.bazel
@@ -16,6 +16,7 @@ DEPENDENCIES = [
     "//rs/execution_environment",
     "//rs/http_endpoints/metrics",
     "//rs/http_endpoints/public",
+    "//rs/http_endpoints/xnet",
     "//rs/https_outcalls/client",
     "//rs/interfaces",
     "//rs/interfaces/certified_stream_store",
@@ -35,7 +36,6 @@ DEPENDENCIES = [
     "//rs/state_manager",
     "//rs/sys",
     "//rs/types/types",
-    "//rs/xnet/endpoint",
     "//rs/xnet/payload_builder",
     "@crate_index//:clap_3_2_25",
     "@crate_index//:hex",
