--- a/rs/ic_os/build_tools/dflate/Cargo.toml
+++ b/rs/ic_os/build_tools/dflate/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true }
 libc = { workspace = true }
 tar = { workspace = true }
