--- a/rs/bitcoin/adapter/BUILD.bazel
+++ b/rs/bitcoin/adapter/BUILD.bazel
@@ -84,6 +84,7 @@ rust_binary(
     deps = DEPENDENCIES + [
         ":adapter",
         "//rs/monitoring/adapter_metrics/server",
+        "@crate_index//:hyper-util",
     ],
 )
 
