--- a/testnet/ansible/ic_p8s_service_discovery_install.yml
+++ b/testnet/ansible/ic_p8s_service_discovery_install.yml
@@ -53,11 +53,9 @@
           Content-Type: application/json
         status_code: 200, 201
       loop:
-        - denylist_updater
         - ic_registry_replicator
-        - icx_proxy
+        - ic_gateway
         - process_exporter
-        - nginx
         - vector
       retries: 50  # 50 times
       delay: 5  # every 5 secons
